--- a/index.htm
+++ b/index.htm
@@ -11,21 +11,22 @@
 <body>
 
     <!-- Navbar start -->
-
-    <div class="nav">
+<section>
+    <div class="top_nav">
         <a href="#">LOGO</a>
-        <div class="nav-right">
+        
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Service</a>
+            <div class="topnav_right"> 
             <a><button type="submit">Login</button></a>
-        </div>
+         </div> 
     </div>
-
+</section>
     <!-- Navbar end -->
 
     <!-- sliderbar start -->
-
+<section>
     <div class="container">
 
 
@@ -59,6 +60,7 @@
             <label class="next" for="i1"></label>
         </div>
     </div>
+</section>
 
     <!-- Slidebar end -->
 
@@ -94,7 +96,7 @@
                 </p>
             </div>
             <div class="about_right">
-                <img src="./img/slide1.jpg">
+                <img src="./img/slide3.jpg">
             </div>
         </div>
     </section>
@@ -149,8 +151,9 @@
 
     <!-- contact start -->
     <section>
-        <h2 class="title-contact"> Contact Us </h2>
+
         <div class="contact-container">
+            <h2 class="title-contact"> Contact Us </h2>
             <form class="form-group">
                 <input type="text" class="form-text" placeholder="Your name">
                 <input type="email" class="form-text" placeholder="Your email">
