--- a/Red Moment/index.htm
+++ b/Red Moment/index.htm
@@ -138,6 +138,20 @@
         </div>
     </div>
 </section>
+
+<!-- images section start -->
+    <section>
+        <div class="img_container">
+            <div class="banner1">
+                <a href="#"><img src="./img/Main_Banner.jpg"></a>
+            </div>
+            <div class="banner2"> <a href="#"><img src="./img/pen.jpg"></a></div>
+            <div class="banner3"> <a href="#"><img src="./img/hand.jpg"></a></div>
+            <div class="banner4"> 
+                <a href="#"><img src="./img/pillow.jpg"></a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
