--- a/Red Moment/index.htm
+++ b/Red Moment/index.htm
@@ -175,112 +175,373 @@
 
     <!--  Cards Slider start   -->
 
-    <section  class="card_section">
+    <section class="card_section">
         <h3 class="card_heading"> Best Under 999 </h3>
-        
-            <div class="cards_container">
-                <div class="card card1">
-                    <div class="card-img">
-                        <img src="./img/couple-frame.png">
-                    </div>
-                    <div class="card-text">
-                        <h3> Couple Frame </h3>
-                        <br>
-                        <p> RS 399.00
-                        </p>
-                    </div>
-                </div>
 
-                <div class="card card2">
-                    <div class="card-img">
-                        <img src="./img/queen.jpg">
-                    </div>
-                    <div class="card-text">
-                        <h3> Queen (heart) pendant </h3>
-                        <br>
-                        <p> RS 690.00
-                        </p>
-                    </div>
+        <div class="cards_container">
+            <div class="card card1">
+                <div class="card-img img1">
+                    <img src="./img/couple-frame.png">
                 </div>
-
-                <div class="card card3">
-                    <div class="card-img">
-                        <img src="./img/couple-frame.png">
-                    </div>
-                    <div class="card-text">
-                        <h3> Couple Frame </h3>
-                        <br>
-                        <p> RS 399.00
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card card4">
-                    <div class="card-img">
-                        <img src="./img/orange bottle.png">
-                    </div>
-                    <div class="card-text">
-                        <h3> Collapsible Bottle </h3>
-                        <br>
-                        <p> RS 790.00
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card card5">
-                    <div class="card-img">
-                        <img src="./img/couple-frame.png">
-                    </div>
-                    <div class="card-text">
-                        <h3> Couple Frame </h3>
-                        <br>
-                        <p> RS 399.00
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card card6">
-                    <div class="card-img">
-                        <img src="./img/queen.jpg">
-                    </div>
-                    <div class="card-text">
-                        <h3> Queen (heart) pendant </h3>
-                        <br>
-                        <p> RS 690.00
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card card7">
-                    <div class="card-img">
-                        <img src="./img/couple-frame.png">
-                    </div>
-                    <div class="card-text">
-                        <h3> Couple Frame </h3>
-                        <br>
-                        <p> RS 399.00
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card card8">
-                    <div class="card-img">
-                        <img src="./img/orange bottle.png">
-                    </div>
-                    <div class="card-text">
-                        <h3> Collapsible Bottle </h3>
-                        <br>
-                        <p> RS 790.00
-                        </p>
-                    </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
                 </div>
             </div>
-        
 
+            <div class="card card2">
+                <div class="card-img">
+                    <img src="./img/queen.jpg">
+                </div>
+                <div class="card-text">
+                    <h3> Queen (heart) pendant </h3>
+                    <br>
+                    <p> RS 690.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card3">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card4">
+                <div class="card-img">
+                    <img src="./img/orange bottle.png">
+                </div>
+                <div class="card-text">
+                    <h3> Collapsible Bottle </h3>
+                    <br>
+                    <p> RS 790.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card5">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card6">
+                <div class="card-img">
+                    <img src="./img/queen.jpg">
+                </div>
+                <div class="card-text">
+                    <h3> Queen (heart) pendant </h3>
+                    <br>
+                    <p> RS 690.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card7">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card8">
+                <div class="card-img">
+                    <img src="./img/orange bottle.png">
+                </div>
+                <div class="card-text">
+                    <h3> Collapsible Bottle </h3>
+                    <br>
+                    <p> RS 790.00
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video_section">
+            <iframe width="100%" height="600px" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            </iframe>
+        </div>
 
 
     </section>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+
+    <!-- Featured Product -->
+
+    <section>
+        <h3 class="card_heading"> Featured Product </h3>
+        <div class="product_icon">
+            <ul class="product_content">
+                <li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i><br> Heart</a></li>
+                <li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i><br> Heart</a></li>
+                <li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i><br> Heart</a></li>
+                <li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i><br> Heart</a></li>
+                <li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i><br> Heart</a></li>
+                <li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i><br> Heart</a></li>
+
+            </ul>
+        </div>
+    </section>
+
+    <!--   best seller start  -->
+
+
+
+    <section class="card_section">
+        <h3 class="card_heading"> BEST SELLER </h3>
+
+        <div class="cards_container">
+            <div class="card card1">
+                <div class="card-img img1">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card2">
+                <div class="card-img">
+                    <img src="./img/queen.jpg">
+                </div>
+                <div class="card-text">
+                    <h3> Queen (heart) pendant </h3>
+                    <br>
+                    <p> RS 690.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card3">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card4">
+                <div class="card-img">
+                    <img src="./img/orange bottle.png">
+                </div>
+                <div class="card-text">
+                    <h3> Collapsible Bottle </h3>
+                    <br>
+                    <p> RS 790.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card5">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card6">
+                <div class="card-img">
+                    <img src="./img/queen.jpg">
+                </div>
+                <div class="card-text">
+                    <h3> Queen (heart) pendant </h3>
+                    <br>
+                    <p> RS 690.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card7">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card8">
+                <div class="card-img">
+                    <img src="./img/orange bottle.png">
+                </div>
+                <div class="card-text">
+                    <h3> Collapsible Bottle </h3>
+                    <br>
+                    <p> RS 790.00
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="banner_img">
+            <a href="#"><img width="100vw" height="300px" src="./img/4Corporate_event_1400x.jpg"></a>
+        </div>
+    </section>
+
+    <!-- New Arrivals Start -->
+
+    <section class="card_section">
+        <h3 class="card_heading"> NEW ARRIVALS </h3>
+
+        <div class="cards_container">
+            <div class="card card1">
+                <div class="card-img img1">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card2">
+                <div class="card-img">
+                    <img src="./img/queen.jpg">
+                </div>
+                <div class="card-text">
+                    <h3> Queen (heart) pendant </h3>
+                    <br>
+                    <p> RS 690.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card3">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card4">
+                <div class="card-img">
+                    <img src="./img/orange bottle.png">
+                </div>
+                <div class="card-text">
+                    <h3> Collapsible Bottle </h3>
+                    <br>
+                    <p> RS 790.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card5">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card6">
+                <div class="card-img">
+                    <img src="./img/queen.jpg">
+                </div>
+                <div class="card-text">
+                    <h3> Queen (heart) pendant </h3>
+                    <br>
+                    <p> RS 690.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card7">
+                <div class="card-img">
+                    <img src="./img/couple-frame.png">
+                </div>
+                <div class="card-text">
+                    <h3> Couple Frame </h3>
+                    <br>
+                    <p> RS 399.00
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card8">
+                <div class="card-img">
+                    <img src="./img/orange bottle.png">
+                </div>
+                <div class="card-text">
+                    <h3> Collapsible Bottle </h3>
+                    <br>
+                    <p> RS 790.00
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Team Section -->
+
+    <section class="team_section">
+        <div class="team_container">
+            <div class="teaminfo1">
+                <img src="./img/testimonials_100x.progressive.png.jpg" >
+                <h5 class="teamtitle" > HELIN SHAH </h5>
+                <p class="teamtext">Amazing service. Got my items real quick undamaged.
+                    In love with every item I bought definitely will buy again and definitely will recommend to family
+                    and friends.
+                    Thank you very much. Really good customer service
+
+                </p>
+            </div>
+            <div class="teaminfo2">
+                <img src="./img/testimonials_100x.progressive.png.jpg"  >
+                <h5 class="teamtitle" > SUNITA IYER </h5>
+                <p class="teamtext">We are thrilled with the personalized gift we ordered. More specially the efforts made by staff at Red Moments to make certain that we received it on time to be a surprise birthday present. When it arrived it was exactly what we were hoping for and we will be back ! Well done to all at Customer Services - a great team.
+                </p>
+            </div>
+        </div>
+        <button class="btn_viewall"> View All </button>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
         crossorigin="anonymous"></script>
