--- a/Red Moment/index.htm
+++ b/Red Moment/index.htm
@@ -522,7 +522,7 @@
         <div class="team_container">
             <div class="teaminfo1">
                 <img src="./img/testimonials_100x.progressive.png.jpg" >
-                <h5 class="teamtitle" > HELIN SHAH </h5>
+                <h5 class="teamtitle" > HIREN PATEL </h5>
                 <p class="teamtext">Amazing service. Got my items real quick undamaged.
                     In love with every item I bought definitely will buy again and definitely will recommend to family
                     and friends.
