--- a/Red Moment/index.htm
+++ b/Red Moment/index.htm
@@ -538,6 +538,22 @@
             </div>
         </div>
         <button class="btn_viewall"> View All </button>
+
+       
+    </section>
+
+    <!--  Tracking Section -->
+
+    <section class="tracking_section">
+        <div class="track_container">
+            <ul class="tracking">
+                <li class="tack_link"><a href="#"></a></li>
+                <li class="tack_link"><a href="#"></a></li>
+                <li class="tack_link"><a href="#"></a></li>
+                <li class="tack_link"><a href="#"></a></li>
+                <li class="tack_link"><a href="#"></a></li>
+            </ul>
+        </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"
