--- a/SASS/mixin.htm
+++ b/SASS/mixin.htm
@@ -9,15 +9,15 @@
 <body>
     
         <div id="one">
-            black
+           <p class="text"> black    </p>
         </div>
 
         <div id="two">
-            live
+           <p class="text"> live</p>
         </div>
 
         <div id="three">
-            matter
+           <p class="text"> matter </p>
         </div>
     
 </body>
