--- a/Website_Scss/index.htm
+++ b/Website_Scss/index.htm
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+ <!--  navbar start here  -->
+
     <header class="nav_container">
         <nav class="mainNavbar">
             <ul class="left_menu">
@@ -33,6 +36,99 @@
             </ul>
         </nav>
     </header>
+
+    <!-- main container start here -->
+<section>
+    <div class="main">
+        <img src="./img/mainbanner.jpg">
+
+        <div class="banner_text">
+            <h3> Hey There !!!</h3>
+            <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus deleniti officia expedita mollitia facere praesentium aliquam aut impedit.
+            </p>
+        </div>
+    </div>
+</section>
+
+
+  <!-- service start -->
+
+  <section class="service">
+    <h2 class="heading"> Our Service </h2>
+
+    <div class="service_container">
+        <div class="card card1">
+            <div class="card-img">
+                <img src="img/web.jpg">
+            </div>
+            <div class="card-text">
+                <h3> WEB DEVELOPMENT </h3>
+                <br>
+                <p>Lorem Ipsum is simply dummy text of
+                    the printing and typesetting industry.
+                </p>
+            </div>
+        </div>
+
+        <div class="card card2">
+            <div class="card-img">
+                <img src="img/app.jpg">
+            </div>
+            <div class="card-text">
+                <h3> APP DEVELOPMENT </h3>
+                <br>
+                <p>Lorem Ipsum is simply dummy text of
+                    the printing and typesetting industry.
+                </p>
+            </div>
+        </div>
+
+        <div class="card card3">
+            <div class="card-img">
+                <img src="img/mobile.jpg">
+            </div>
+            <div class="card-text">
+                <h3> MOBILE DEVELOPMENT </h3>
+                <br>
+                <p>Lorem Ipsum is simply dummy text of
+                    the printing and typesetting industry.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Team Section -->
+
+<section class="team_section">
+    <div class="team_container">
+        <div class="teaminfo">
+            <img class="team1" src="img/testimonials_100x.progressive.png.jpg" >
+            <h5 class="teamtitle" > HIREN PATEL </h5>
+            <p class="teamtext">Amazing service. Got my items real quick undamaged.
+                In love with every item I bought definitely will buy again and definitely will recommend to family
+                and friends.
+                Thank you very much. Really good customer service
+
+            </p>
+        </div>
+        <div class="teaminfo">
+            <img class="team2" src="./img/testimonials_100x.progressive.png.jpg"  >
+            <h5 class="teamtitle" > SUNITA IYER </h5>
+            <p class="teamtext">We are thrilled with the personalized gift we ordered. More specially the efforts made by staff at Red Moments to make certain that we received it on time to be a surprise birthday present. When it arrived it was exactly what we were hoping for and we will be back ! Well done to all at Customer Services - a great team.
+            </p>
+        </div>
+    </div>
+
+   
+</section>
+
+    <!-- footer start -->
+    <footer>
+        <p>Copyrights &#169;: Hiren Patel</p>
+    </footer>
+
 </body>
 
 </html>
