--- a/Website_Scss/index.htm
+++ b/Website_Scss/index.htm
@@ -115,7 +115,7 @@
         </div>
         <div class="teaminfo">
             <img class="team2" src="./img/testimonials_100x.progressive.png.jpg"  >
-            <h5 class="teamtitle" > SUNITA IYER </h5>
+            <h5 class="teamtitle" > HIREN PATEL </h5>
             <p class="teamtext">We are thrilled with the personalized gift we ordered. More specially the efforts made by staff at Red Moments to make certain that we received it on time to be a surprise birthday present. When it arrived it was exactly what we were hoping for and we will be back ! Well done to all at Customer Services - a great team.
             </p>
         </div>
